# ashare-quant-tool

./: .env.bak  .env.example  .gitignore  README.md  pyproject.toml  quant.bat  start.ps1  start.sh  start_quant_tool.bat  stop.bat  streamlit_app.py
.streamlit/: config.toml
docs/: AKShare接入与兼容性说明.md  GitHub上传说明.md  V1技术设计书-上半部分.md  多数据源回退设计说明.md  局域网部署说明.md  本地持久化缓存层设计说明.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AppSidebar.vue  ErrorAlert.vue  KlineChart.vue  LoadingSpinner.vue  MetricCard.vue  MiniChart.vue
frontend/src/composables/: useWatchlist.ts
frontend/src/router/: index.ts
frontend/src/views/: DiagnosisView.vue  RankingsView.vue  StatusView.vue  WatchlistView.vue
scripts/: akshare_parser_check.py  cache_smoke_test.py  demo_run.py  deploy_to_lan.ps1  multi_provider_parser_check.py  push_to_github.ps1  ui_data_smoke_test.py
src/ashare_quant/: __init__.py  config.py  models.py
src/ashare_quant/analysis/: __init__.py  factors.py  scoring.py
src/ashare_quant/api/: cache.py  main.py  schemas.py  trading_calendar.py
src/ashare_quant/cache/: __init__.py  provider_cache.py  sqlite_cache.py
src/ashare_quant/providers/: __init__.py  akshare_cleaner.py  akshare_provider.py  baostock_provider.py  base.py  composite_provider.py  eastmoney_provider.py  factory.py  (+5 more)
src/ashare_quant_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/services/: test_market_service.py
tests/ui/: test_dashboard_data.py
(+12 files in other folders)
