[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-quant-tool"
version = "0.1.0"
description = "A-share quant analysis tool for stock screening and buy/sell timing research."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "akshare>=1.14.0",
  "tushare>=1.4.20",
  "baostock>=0.8.9",
  "pandas>=2.2.0",
  "streamlit>=1.38.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
